--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,8 @@
    display: flex;
    max-width: 100%;
    padding:2%;
+   justify-content: space-between;
+   flex: 1;
    
 }
 
@@ -74,7 +76,7 @@
 
 @media screen and (max-width:768px) {
     .card {
-        display: grid;
+        display: table-column;
         width: 50%;
         grid-template-columns:
             repeat(1fr 1fr);
