Fixed css and index for absolute / relative positions. Other CSS changes.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,57 +1,94 @@
 * { 
+    box-sizing: border-box;
     background-color: rgb(51, 48, 48);
     margin: 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', sans-serif;
 }
 
 .header h1 {
-    color:purple;
+    color:violet;
     text-align: center;
 
 }
 .header h2 {
     color: white;
-    font-size: medium;
+    font-size: 80%;
     text-align: center;
-   
+    margin-left: 100px;
+    margin-top: 20px;
+    margin-right: 100px;
+    margin-bottom: 20px;
 }
-.section{
+main {
     display: flex;
-    width: 100px;
-    flex-wrap: nowrap;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
-.card{
+.card-description{
+    width: 200px;
+    height: 250px;
+
+    padding-top: 30px;
     border-style: dashed;
     border-radius: 5px;
     border-width: 1px;
     border-color: white;
+
+    margin: 100px 20px 20px 20px;
+    padding-top: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
     text-align: left;
+
     position: relative;
-
-
+    
+    
+    background-image: linear-gradient(rgba(232, 102, 236, 0.3) 0%, 
+    rgba(232, 102, 236, 0.3) 100%); 
 }
 
-.card h2{
-    color: purple;
+.card-title {
+    width: 150px;
+    height: 90px;
+
+    color: violet;
+    font-size: 80%;
+    text-align: left;
+
+    padding: 10px;
+
     border-style: solid;
     border-color: white;
     border-radius: 5px;
     border-width:1px;
-    text-align: left;
-    
 
+    position: absolute;
+
+    margin-top: -340px;
+    margin-left: 40px;
 }
 
-.card h3{
-    color: purple;
+.card-description h3{
+    color: violet;
+    font-size: 75%;
 
+    background-image: linear-gradient(rgba(232, 102, 236, 0.3) 0%, 
+    rgba(232, 102, 236, 0.3) 100%); 
 }
 
-.card h4{
-    background-color: purple;
+.card-description h4{
     color: white;
     font-family: monospace;
     border-radius: 5px;
-   
+
+    background-image: linear-gradient(rgba(232, 102, 236, 0.3) 0%, 
+    rgba(232, 102, 236, 0.3) 100%); 
 }
 
+footer h2 {
+    color: violet;
+    text-align: center;
+}
